# claude-curriculum-updater

./: .gitignore  CLAUDE.md  README.md  curriculum.md  pyproject.toml
.claude/: .bundle-baseline  settings.json  settings.local.json
.claude/agents/: changelog-generator.md  deployment-verifier.md  hook-creator.md  hook-deployer.md  hook-reviewer.md  quality-gate.md  seo-auditor.md
.claude/hooks/: anti-hallucination.sh  audit-dependencies.sh  block-dangerous-commands.sh  check-accessibility.sh  check-assets.sh  check-bundle-size.sh  check-content.sh  check-performance.sh  commit-quality.sh  detect-dead-code.sh  enforce-build-test.sh  enforce-dark-first.sh  enforce-imports.sh  enforce-palette.sh  enforce-tailwind4.sh  notify-completion.sh  protect-files.sh  save-before-compact.sh  session-context.sh  test-reminder.sh  validate-build.sh  validate-curriculum-content.sh  validate-curriculum-sync.sh  validate-links.sh  validate-tsx-structure.sh
.github/workflows/: nightly-qa.yml  qa.yml
claude_code_mastery/: __init__.py  cache.py  docs_differ.py  scheduler.py  semantic.py  server.py
curriculum_updater_mcp/: __init__.py  analyzer.py  cache.py  docs_differ.py  scheduler.py  server.py  sources.py
site/: .gitignore  curriculum.md  package-lock.json  package.json  playwright.config.ts
site/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
site/components/: auth-button.tsx  certificate-unlock.tsx  certificate.tsx  contextual-tool-cta.tsx  email-banner.tsx  email-gate.tsx  email-signup.tsx  exit-intent-popup.tsx  inline-email-cta.tsx  markdown-renderer.tsx  mobile-nav.tsx  premium-badge.tsx  premium-gate.tsx  pro-promo-banner.tsx  progress-indicator.tsx  sidebar.tsx  theme-toggle.tsx  tool-recommendation-widget.tsx  upgrade-cta.tsx  week-card.tsx  week-complete-button.tsx
site/e2e/: dark-mode.spec.ts  forms.spec.ts  links.spec.ts  responsive.spec.ts  seo.spec.ts  smoke.spec.ts
site/lib/: affiliate-tools.ts  auth-context.tsx  constants.ts  email.ts  parse-curriculum.ts  progress-context.tsx  supabase.ts  types.ts
site/sql/: schema.sql
site/types/: lemonsqueezy.d.ts
tests/: test_analyzer.py  test_auto_apply.py  test_cache.py  test_docs_differ.py  test_email_notify.py  test_semantic.py  test_sources.py
(+11 files in other folders)
