[project]
name = "curriculum-updater-mcp"
version = "1.0.0"
description = "MCP server that monitors Claude Code updates from Boris Cherny's X account and Anthropic sources, then updates your learning curriculum."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
curriculum-updater = "curriculum_updater_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
