[project]
name = "claude-code-mastery"
version = "2.1.0"
description = "A 12-week Claude Code course with an auto-updating MCP server, course website, and scheduled curriculum maintenance."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
claude-code-mastery = "claude_code_mastery.server:main"
claude-code-mastery-check = "claude_code_mastery.scheduler:main"

[tool.setuptools.packages.find]
include = ["claude_code_mastery*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
